// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`subpackage playground uni-app build:mp-weixin: uni-app build:mp-weixin common/assets.js 1`] = `
""use strict";
const _imports_0$1 = "/sub/static/logo.png";
const _imports_1$1 = "/sub/static/logo.png";
const _imports_2 = "/sub/assets/logo-dc.759742f5.png";
const _imports_0 = "/sub/uni_modules/test-component/static/logo-hx.png";
const _imports_1 = "/sub/uni_modules/test-module/static/logo-hx.png";
exports._imports_0 = _imports_0$1;
exports._imports_0$1 = _imports_0;
exports._imports_1 = _imports_1$1;
exports._imports_1$1 = _imports_1;
exports._imports_2 = _imports_2;
"
`;

exports[`subpackage playground uni-app build:mp-weixin: uni-app build:mp-weixin pages/index/index.wxss 1`] = `
"@import "../../app.wxss";
"
`;

exports[`subpackage playground uni-app build:mp-weixin: uni-app build:mp-weixin uni_modules/test-module/components/test-component/test-component.wxss 1`] = `""`;

exports[`subpackage playground uni-app build:mp-weixin: uni-app build:mp-weixin uni_modules/test-module/pages/index/index.wxss 1`] = `
"@import "../../../../app.wxss";
"
`;

exports[`subpackage playground uni-app dev:mp-weixin: uni-app dev:mp-weixin common/assets.js 1`] = `
""use strict";
const _imports_0$1 = "/sub/static/logo.png";
const _imports_1$1 = "/sub/static/logo.png";
const _imports_2 = "/sub/assets/logo-dc.759742f5.png";
const _imports_0 = "/sub/uni_modules/test-component/static/logo-hx.png";
const _imports_1 = "/sub/uni_modules/test-module/static/logo-hx.png";
exports._imports_0 = _imports_0$1;
exports._imports_0$1 = _imports_0;
exports._imports_1 = _imports_1$1;
exports._imports_1$1 = _imports_1;
exports._imports_2 = _imports_2;
"
`;

exports[`subpackage playground uni-app dev:mp-weixin: uni-app dev:mp-weixin pages/index/index.wxss 1`] = `
"@import "../../app.wxss";
"
`;

exports[`subpackage playground uni-app dev:mp-weixin: uni-app dev:mp-weixin uni_modules/test-module/components/test-component/test-component.wxss 1`] = `""`;

exports[`subpackage playground uni-app dev:mp-weixin: uni-app dev:mp-weixin uni_modules/test-module/pages/index/index.wxss 1`] = `
"@import "../../../../app.wxss";
"
`;

exports[`subpackage playground uni-app-x build:mp-weixin: uni-app-x build:mp-weixin common/assets.js 1`] = `
""use strict";
const _imports_0$1 = "/sub/static/logo.png";
const _imports_1$1 = "/sub/static/logo.png";
const _imports_2 = "/sub/assets/logo-dc.759742f5.png";
const _imports_0 = "/sub/uni_modules/test-component/static/logo-hx.png";
const _imports_1 = "/sub/uni_modules/test-module/static/logo-hx.png";
exports._imports_0 = _imports_0$1;
exports._imports_0$1 = _imports_0;
exports._imports_1 = _imports_1$1;
exports._imports_1$1 = _imports_1;
exports._imports_2 = _imports_2;
"
`;

exports[`subpackage playground uni-app-x build:mp-weixin: uni-app-x build:mp-weixin pages/index/index.wxss 1`] = `
"@import "../../app.wxss";
@import "../../uvue.wxss";
:host{display:flex;flex-direction:column}
"
`;

exports[`subpackage playground uni-app-x build:mp-weixin: uni-app-x build:mp-weixin uni_modules/test-module/components/test-component/test-component.wxss 1`] = `
":host{display:flex;flex-direction:column}
"
`;

exports[`subpackage playground uni-app-x build:mp-weixin: uni-app-x build:mp-weixin uni_modules/test-module/pages/index/index.wxss 1`] = `
"@import "../../../../app.wxss";
@import "../../../../uvue.wxss";
:host{display:flex;flex-direction:column}
"
`;

exports[`subpackage playground uni-app-x dev:mp-weixin: uni-app-x dev:mp-weixin common/assets.js 1`] = `
""use strict";
const _imports_0$1 = "/sub/static/logo.png";
const _imports_1$1 = "/sub/static/logo.png";
const _imports_2 = "/sub/assets/logo-dc.759742f5.png";
const _imports_0 = "/sub/uni_modules/test-component/static/logo-hx.png";
const _imports_1 = "/sub/uni_modules/test-module/static/logo-hx.png";
exports._imports_0 = _imports_0$1;
exports._imports_0$1 = _imports_0;
exports._imports_1 = _imports_1$1;
exports._imports_1$1 = _imports_1;
exports._imports_2 = _imports_2;
"
`;

exports[`subpackage playground uni-app-x dev:mp-weixin: uni-app-x dev:mp-weixin pages/index/index.wxss 1`] = `
"@import "../../app.wxss";
@import "../../uvue.wxss";
:host{display:flex;flex-direction:column}
"
`;

exports[`subpackage playground uni-app-x dev:mp-weixin: uni-app-x dev:mp-weixin uni_modules/test-module/components/test-component/test-component.wxss 1`] = `
":host{display:flex;flex-direction:column}
"
`;

exports[`subpackage playground uni-app-x dev:mp-weixin: uni-app-x dev:mp-weixin uni_modules/test-module/pages/index/index.wxss 1`] = `
"@import "../../../../app.wxss";
@import "../../../../uvue.wxss";
:host{display:flex;flex-direction:column}
"
`;
